body-shop item col -sm/md/lg

--- a/bodyShop/bodyShop.css
+++ b/bodyShop/bodyShop.css
@@ -92,6 +92,14 @@ margin-right: 0px;
   color: gray;
 }
 
+.items{
+  margin-right: 2rem;
+}
+
+.number{
+  margin-right: 1rem;
+}
+
 
  /* CUSTOMIZE THE CAROUSEL
   -------------------------------------------------- */
